# invari-spec

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
benchmark_tests/: benchmark_utils.py  test_benchmark_utils.py
docs/: architecture.md  bug-classes.md  modeling-guide.md  public-roadmap.md
examples/infinite_retry/: SPEC.md  expected.dsl.py
examples/missing_fallback/: SPEC.md  expected.dsl.py
examples/unreachable_success/: SPEC.md  expected.dsl.py
examples/workflow_retry_with_fallback/: SPEC.md  expected.dsl.py
invari_spec/: __init__.py  cli.py
invari_spec/pipeline/: __init__.py  dsl_validation.py  markdown_to_dsl.py  reporting.py  result_types.py  tla_runner.py  tla_sanity.py
invari_spec/prompts/: markdown_to_semantic_dsl_prompt_v1.txt
invari_spec/semantic_dsl/: __init__.py  ast_parser.py  errors.py  model.py  tla.py
scripts/: setup.sh
speclens/: __init__.py  cli.py
speclens/pipeline/: __init__.py  dsl_validation.py  markdown_to_dsl.py  reporting.py  result_types.py  tla_runner.py
speclens/prompts/: markdown_to_semantic_dsl_prompt_v1.txt
speclens/semantic_dsl/: __init__.py  ast_parser.py  model.py  tla.py
test_md/: doc_approval.md  doc_creation.md  payment_processing.md  payment_processing_known_gaps.md  pr_maintainer.md  refund_processing.md
tests/: test_cli_check.py  test_examples_smoke.py  test_markdown_to_dsl_pipeline.py  test_semantic_dsl_parser.py  test_semantic_dsl_tla.py
